okay this is a full controller as well as the controller test getting a weird error that i am not too bothered with right now because the actual controller works for the same implementation.
will start the jquery and html builds based on the controllers and start moving to front end need you guys to complete the controllers as well as get on the services please thanks

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -5,6 +5,15 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Jquery Test</h1>
+        
+        <script type="javscript/text" src="http://code.jquery.com/jquery-1.11.1.min.js"/>
+         <script type="javscript/text">
+                $(document).ready(function(){
+                    console.log('hello');
+                });
+        </script>
     </body>
+   
+    
 </html>
