--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -49,7 +49,7 @@
                                 console.log(obj.location.locationOfCemetery);
                                 console.log(obj.contactName);
                                 console.log(obj.contactNumber);
-
+// building html objects here
 $(".siteContent").append("<div>" + 'cemetery ID : ' + obj.id + ' Location - Country : ' + obj.location.country + ' Cemetery Name : ' + obj.location.cemeteryName +"</div>" + "<br>"); 
                             
         }
@@ -70,9 +70,9 @@ $(".siteContent").append("<div>" + 'cemetery ID : ' + obj.id + ' Location - Coun
         //var data = [{"id":17,"location":{"country":"America","province_State":"New Jersey","district_state":"Washington","town":"Marlboro","cemeteryName":"Palm Springs","locationOfCemetery":"12.06.12:45.63.89"},"contactName":"Palm Springs","contactNumber":"0215698412"}];
         var data = 0;
         $.ajax({
-                    type: "POST",
+                    type: "POST", 
                     url: "/CemeteryListingsWebApp/api/cemetery/create",
-                    data: JSON.stringify({ "contactName": 'mattcat', "contactNumber" : 123456789 }),// now data come in this function
+                    data: JSON.stringify({ "contactName": 'mattcat', "contactNumber" : 123456789 }),// now data come in this function stringyfy is needed in order to turn string into json
                     dataType: "JSON",
                     contentType: "application/json",
                     success: function (status, jqXHR) {
@@ -83,7 +83,7 @@ $(".siteContent").append("<div>" + 'cemetery ID : ' + obj.id + ' Location - Coun
                     error: function (jqXHR, status) {
                         // error handler
                         console.log(jqXHR);
-                        alert('fail ' + status.code);
+                        //alert('fail ' + status.code);
                     }
                  });
                });
