should fix all the I/O errors we are recieving and all controllers will pass

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,7 +4,7 @@
          
         <title>Start Page</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="css/index.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
         <div class="siteWrapper"> <!-- this is the beginning of site wrapper will contain the entire pages html -->       
