further styling done, will continue tomorrow

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -8,7 +8,7 @@
     <div class="pageHeader">
         <a href="#" class="logo"><img src="resources/images/logo2.jpg"></a>
                 <ul class="navList">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="/CemeteryListingsWebApp/">Home</a></li>
                     <li><a href="api/cemetery/cemeterylistings">Cemetery Listings</a></li>
                     <li><a href="#">Deceased Listings</a></li>
                     <li><a href="#">Contact US</a></li>
