login service - not complete though almost there

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -7,11 +7,12 @@
 <body class="siteWrapper">
     <div class="pageHeader">
         <a href="#" class="logo"><img src="resources/images/logo2.jpg"></a>
-                <ul class="navList">
+                <ul class="navList" style="width : 100%">
                     <li><a href="/CemeteryListingsWebApp/">Home</a></li>
                     <li><a href="api/cemetery/cemeterylistings">Cemetery Listings</a></li>
                     <li><a href="#">Deceased Listings</a></li>
-                    <li><a href="#">Contact US</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li> <a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;">Login</a></li>
                 </ul>   
 
                 <ul class="socialListNav">
@@ -20,6 +21,7 @@
                     <li><a href="#"><img src="resources/images/tweetbtn.png" class="simpleLogo"></a></li>
                 </ul>   
 
+               
             </div>
             <div class="dummyHeader"></div>
     <div class="pageWrapper">
