just have to finish off the admin publish or delete unpublished listings, and add menu options to the admin page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
         <a href="#" class="logo"><img src="resources/images/logo2.jpg"></a>
                 <ul class="navList" style="width : 100%">
                     <li><a href="/CemeteryListingsWebApp/">Home</a></li>
-                    <li><a href="api/cemetery/cemeterylistings">Cemetery Listings</a></li>
+                    <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
                     <li><a href="#">Deceased Listings</a></li>
                     <li><a href="#">Contact Us</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/auth/login" style="margin-left:10% !important;" class="user">Login</a></li>
@@ -28,7 +28,7 @@
             </div>
     <div class="dummyHeader">
         <label>Search</label>
-        <input type="text" id="searchBar" class="searchBar" name="cusername">
+        <input type="text" id="searchBar" class="searchBar" name="cusername" placeholder="Search, begin with upper case">
         <input type="button" id="searchButton" class="searchbutton" value="S">
     </div>
     <div class="pageWrapper">
