various design fixes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+     <title>Cemetery Listings</title>
     <link rel="stylesheet" type="text/css" href="resources/css/blackAndWhite.css">
     <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" src="/CemeteryListingsWebApp/resources/js/scripts/script.js"></script>
@@ -14,7 +15,7 @@
 <script type="text/javascript">
     $(function() 
     {
-        setInterval("rotateImages()", 4000);
+        setInterval("rotateImages()", 2000);
     });
     function rotateImages() 
     {
@@ -66,7 +67,7 @@
 <body class="siteWrapper">
     <div class="pageHeader">
      
-        <a href="#" class="logo"><img src="resources/images/logo3.jpg"></a>
+        <a href="/CemeteryListingsWebApp/" class="logo"><img src="resources/images/logo3.jpg"></a>
                 <ul class="navList" style="width : 100%">
                     <li><a href="/CemeteryListingsWebApp/">Home</a></li>
                     <li><a href="/CemeteryListingsWebApp/api/cemetery/cemeterylistings">Cemetery Listings</a></li>
