removed tests leaving data behind after build

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -89,7 +89,7 @@
     <div class="dummyHeader">
         <br><br>
         <label>Search</label>
-        <input type="text" id="searchBar" class="searchBar" name="cusername" placeholder="Search, begin with upper case">
+        <input type="text" id="searchBar" class="searchBar" name="cusername" placeholder="Search for grave number, surname or maiden name">
         <input type="button" id="searchButton" class="searchbutton" value="S">
     </div>
     <div class="pageWrapper" >
